Improved image methods